# TestQml

./: .gitignore  CMakeLists.txt  MainMenu.qml  MenuItem.qml  Start VS2015 64bit.bat  Start VS2017 64bit.bat  TestQml.pro  TestQml.vcxproj  TestQml.vcxproj.filters  game.cpp  game.h  gamecontroller.cpp  gamecontroller.h  main.cpp  main.qml  mainmenu.cpp  mainmenu.h  qml.qrc
config/: _settings.cmake  add_project.cmake
